--- a/mila_website/css/style.css
+++ b/mila_website/css/style.css
@@ -2460,18 +2460,21 @@ footer .credit p i {
     padding: 0%;
   }
   header div.main div.mid {
-    width: 60%;
-    height: 80%;
+    width: 100%;
+    height: 60%;
     background-color: #ffffff;
     align-items: flex-end;
   }
+  header div.main div.mid .hero {
+    height: 90%;
+  }
   header div.main div.mid .hero svg {
-    width: 60%;
-    height: auto;
+    width: auto;
+    height: 80%;
   }
   header div.main div.mid .hero img {
-    width: 55%;
-    height: auto;
+    width: auto;
+    height: 100%;
   }
   header div.main div.right {
     align-items: center;
@@ -2598,7 +2601,7 @@ footer .credit p i {
     padding: 0%;
   }
   header div.main div.mid {
-    width: 60%;
+    width: 100%;
     height: 80%;
     background-color: #ffffff;
     align-items: flex-end;
