--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -2932,18 +2932,19 @@ footer {
       padding: 0%;
 
       div.mid {
-        width: 60%;
-        height: 80%;
+        width: 100%;
+        height: 60%;
         background-color: #ffffff;
         align-items: flex-end;
         .hero{
+          height: 90%;
           svg{
-            width: 60%;
-            height: auto;
+            width: auto;
+            height: 80%;
           }
           img{
-            width: 55%;
-            height: auto;
+            width: auto;
+            height: 100%;
           }
         }
       }
@@ -3144,7 +3145,7 @@ footer {
       padding: 0%;
 
       div.mid {
-        width: 60%;
+        width: 100%;
         height: 80%;
         background-color: #ffffff;
         align-items: flex-end;
